llvm-toolchain-12 (1:12.0.0-3) UNRELEASED; urgency=medium

  [ Matthias Klose ]
  * Improve the clean rule

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 15 Apr 2021 13:27:57 +0200

llvm-toolchain-12 (1:12.0.0-1) unstable; urgency=medium

  * New upstream release

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 15 Apr 2021 07:57:57 +0200

llvm-toolchain-12 (1:12.0.0~++rc5-2) unstable; urgency=medium

  * Add -DCMAKE_SUPPRESS_REGENERATION=ON to limit the number of calls
    to cmake
    Try to workaround a bug on llvm-toolchain-stretch-12-binaries
    architecture=s390x,stretch

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 10 Apr 2021 14:59:07 +0200

llvm-toolchain-12 (1:12.0.0~++rc5-1) unstable; urgency=medium

  * New testing upstream release
  * Verify that /proc is mounted. It makes some unexpected issues when
    building from a chroot without /proc

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 08 Apr 2021 18:04:07 +0200

llvm-toolchain-12 (1:12.0.0~++rc4-1) unstable; urgency=medium

  * New testing upstream release
  * Cherry-pick https://reviews.llvm.org/D99501 to allow -flto=auto

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 01 Apr 2021 08:56:19 +0200

llvm-toolchain-12 (1:12.0.0~++rc3-4) unstable; urgency=medium

  * dont' fail fsanitize=thread on i386, not supported
  * Don't hard fail on z3 failures with "set -e" at the begin, if z3 support is not available we do fail and exit testsuite without checking the log
  * Don't force gcc-11 anymore on riscv64, gcc-10 has the fixes now

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Sat, 20 Mar 2021 17:16:26 +0100

llvm-toolchain-12 (1:12.0.0~++rc3-3) unstable; urgency=medium

  * Cherry-pick upstream commit e3cd3a3c91524c957e06bb0170343548f02b6842
    bring back Reporter.py needing to make scan-view work.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 17 Mar 2021 13:11:46 +0100

llvm-toolchain-12 (1:12.0.0~++rc3-2) unstable; urgency=medium
