@@ -2,10 +2,9 @@
 
 usr/lib/llvm-@LLVM_VERSION@/lib/libLLVM*.a
 #usr/lib/llvm-@LLVM_VERSION@/lib/libllvm*.a
-[!powerpc !powerpcspe] usr/lib/llvm-@LLVM_VERSION@/lib/LLVM*.so
 usr/lib/llvm-@LLVM_VERSION@/lib/libLLVM.so
 usr/lib/llvm-@LLVM_VERSION@/lib/libLLVM-@LLVM_VERSION@*.so
-usr/lib/llvm-@LLVM_VERSION@/lib/libLTO.*
+usr/lib/llvm-@LLVM_VERSION@/lib/libLTO.so
 usr/lib/llvm-@LLVM_VERSION@/lib/libRemarks.*
 usr/lib/llvm-@LLVM_VERSION@/include/llvm/      usr/include/llvm-@LLVM_VERSION@/
 usr/lib/llvm-@LLVM_VERSION@/include/llvm-c/	usr/include/llvm-c-@LLVM_VERSION@/
